crates/nash-parse/src/expression/snapshots/nash_parse__expression__case__tests__case_nested.snap
---
source: crates/nash-parse/src/expression/case.rs
description: "Code:\n\ncase x of\n    Just y ->\n        case y of\n            Just z -> z\n            Nothing -> 0\n    Nothing -> 0\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 7,
            column: 1,
        },
    },
    value: Case {
        scrutinee: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Var {
                kind: LowVar,
                name: "x",
            },
        },
        arms: [
            CaseArm {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 12,
                        },
                    },
                    value: Ctor {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 9,
                            },
                        },
                        name: "Just",
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 11,
                                    },
                                },
                                value: Var(
                                    "y",
                                ),
                            },
                        ],
                    },
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 9,
                        },
                        end: Position {
                            line: 6,
                            column: 5,
                        },
                    },
                    value: Case {
                        scrutinee: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 14,
                                },
                                end: Position {
                                    line: 3,
                                    column: 15,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "y",
                            },
                        },
                        arms: [
                            CaseArm {
                                pattern: Located {
                                    region: Region {
                                        start: Position {
                                            line: 4,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 4,
                                            column: 20,
                                        },
                                    },
                                    value: Ctor {
                                        region: Region {
                                            start: Position {
                                                line: 4,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 4,
                                                column: 17,
                                            },
                                        },
                                        name: "Just",
                                        args: [
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 4,
                                                        column: 18,
                                                    },
                                                    end: Position {
                                                        line: 4,
                                                        column: 19,
                                                    },
                                                },
                                                value: Var(
                                                    "z",
                                                ),
                                            },
                                        ],
                                    },
                                },
                                body: Located {
                                    region: Region {
                                        start: Position {
                                            line: 4,
                                            column: 23,
                                        },
                                        end: Position {
                                            line: 4,
                                            column: 24,
                                        },
                                    },
                                    value: Var {
                                        kind: LowVar,
                                        name: "z",
                                    },
                                },
                            },
                            CaseArm {
                                pattern: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 21,
                                        },
                                    },
                                    value: Ctor {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 20,
                                            },
                                        },
                                        name: "Nothing",
                                        args: [],
                                    },
                                },
                                body: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 24,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 25,
                                        },
                                    },
                                    value: Int(
                                        0,
                                    ),
                                },
                            },
                        ],
                    },
                },
            },
            CaseArm {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 6,
                            column: 5,
                        },
                        end: Position {
                            line: 6,
                            column: 13,
                        },
                    },
                    value: Ctor {
                        region: Region {
                            start: Position {
                                line: 6,
                                column: 5,
                            },
                            end: Position {
                                line: 6,
                                column: 12,
                            },
                        },
                        name: "Nothing",
                        args: [],
                    },
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 6,
                            column: 16,
                        },
                        end: Position {
                            line: 6,
                            column: 17,
                        },
                    },
                    value: Int(
                        0,
                    ),
                },
            },
        ],
    },
}
